--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 <h1>Copa America & Euro 2021</h1>
                 <a class="link-button" href="">watch now <i class="fas fa-arrow-right"></i></a>
             </div>
-            <div>
-                <img src="images/banner.png" alt="">
+            <div class="photo-frame">
+                <img class="photo" src="images/banner.png" alt="">
             </div>
 
         </nav>
