--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
         <nav class="navigations">
             <div class="navigation">
                 <h1>Copa America & Euro 2021</h1>
-                <a class="link-button" href="">watch now <i class="fas fa-arrow-right"></i></a>
+                <a target="blank" class="link-button"
+                    href="https://www.google.com/search?q=copa+america+euro+2021+highlights&hl=en&sxsrf=ALeKk00OG1Yz76lRANz1H_pzI6SzH6JcAA%3A1626255208051&ei=aK_uYKGyAvuV4-EP8dOj4A0&oq=copa+america+%26+euro+2021+h&gs_lcp=Cgdnd3Mtd2l6EAEYADIICCEQFhAdEB4yCAghEBYQHRAeMggIIRAWEB0QHjIICCEQFhAdEB4yCAghEBYQHRAeMggIIRAWEB0QHjIICCEQFhAdEB4yCAghEBYQHRAeMggIIRAWEB0QHjIICCEQFhAdEB46BwgjELADECc6BwgAEEcQsANKBAhBGABQtA1Ykhlg4x9oAnACeACAAYwBiAGSA5IBAzAuM5gBAKABAaoBB2d3cy13aXrIAQnAAQE&sclient=gws-wiz">watch
+                    now <i class="fas fa-arrow-right"></i></a>
             </div>
             <div class="photo-frame">
                 <img class="photo" src="images/banner.png" alt="">
@@ -132,7 +134,9 @@
                                 1-0 in the final at the historic Maracana Stadium in Rio de Janeiro. Angel Di Maria
                                 scored the only goal of the match in the 22nd minute. This is Lionel Messi's first major
                                 trophy with the Argentina senior team.</p>
-                            <a href="">watch now <i class="fas fa-arrow-right"></i></a>
+                            <a target="blank"
+                                href="https://www.google.com/search?q=Copa+America+2021+final+Highlights&rlz=1C1GGRV_enBD908BD908&oq=Copa+America+2021+final+Highlights&aqs=chrome..69i57j69i60.4805j0j7&sourceid=chrome&ie=UTF-8">watch
+                                now <i class="fas fa-arrow-right"></i></a>
                         </div>
                         <div>
                             <img src="images/final.jpg" alt="">
@@ -148,7 +152,9 @@
                                 after a 1-1 scoreline after extra time at the Wembley Stadium in London on Monday.
                                 England missed three penalties in the shootout as Italy defeated England 3-2 in the Euro
                                 2020 final.</p>
-                            <a href="">watch now <i class="fas fa-arrow-right"></i></a>
+                            <a target="blank"
+                                href="https://www.google.com/search?q=UEFA+Euro+2021+final+Highlights&rlz=1C1GGRV_enBD908BD908&oq=UEFA+Euro+2021+final+Highlights&aqs=chrome..69i57j0i22i30j0i390.863j0j7&sourceid=chrome&ie=UTF-8">watch
+                                now <i class="fas fa-arrow-right"></i></a>
                         </div>
                         <div>
                             <img src="images/euro.jpg" alt="">
@@ -162,7 +168,9 @@
                             <p class="detail">The 2020 Summer Olympics, officially the Games of the XXXII Olympiad and
                                 branded as Tokyo 2020, is an upcoming international multi-sport event scheduled to be
                                 held from 23 July to 8 August 2021 in Tokyo, Japan</p>
-                            <a href="">watch now <i class="fas fa-arrow-right"></i></a>
+                            <a target="blank"
+                                href="https://www.google.com/search?q=olympic+games+tokyo+2020&rlz=1C1GGRV_enBD908BD908&oq=Olympic+Games+Tokyo+2020&aqs=chrome.0.0j0i20i263j46l2j0l6.1055j0j7&sourceid=chrome&ie=UTF-8">watch
+                                now <i class="fas fa-arrow-right"></i></a>
                         </div>
                         <div>
                             <img src="images/tokyo.png" alt="">
